--- a/src/app/components/designer/training-definition/level-configuration/questions/multiple-choice-question/multiple-choice-question.component.css
+++ b/src/app/components/designer/training-definition/level-configuration/questions/multiple-choice-question/multiple-choice-question.component.css
@@ -30,7 +30,7 @@ mat-checkbox {
 }
 
 .right-panel > * {
-  margin: 10px;
+  margin-bottom: 10px;
 }
 
 
